Провел merge ветки master и add-swagger. Нужно подправить тесты. Подправить сессии пользователей
