# backend/auth/internal/controllers/user.go
@@ -11,7 +11,7 @@ type UserController struct {
 func AddUserControllerRoutes(api *fiber.Router, userService userService, authMiddleware AuthMiddleware) {
 	controller := &UserController{userService: userService}
 
-	(*api).Get("user/", controller.GetByID, authMiddleware.IsAdmin)
+	(*api).Get("user/:id", controller.GetByID, authMiddleware.IsAdmin)
 }
 
 // Get User By ID
@@ -20,13 +20,13 @@ func AddUserControllerRoutes(api *fiber.Router, userService userService, authMid
 // @Tags         Users
 // @Accept       json
 // @Produce      json
-// @Param        user_id query  int  true  "User ID"
+// @Param        id path  int  true  "User ID"
 // @Success      200  {object}  models.User
 // @Failure      400  {object}  error
 // @Failure      404  {object}  error
-// @Router       /user/ [get]
+// @Router       /user/{id} [get]
 func (uc *UserController) GetByID(ctx fiber.Ctx) error {
-	user_id := fiber.Query[int](ctx, "user_id")
+	user_id := fiber.Params[int](ctx, "id")
 
 	user, err := uc.userService.GetByID(user_id)
 	if err != nil {
